Feat: 병원 진료 과목으로 검색 기능 구현