@@ -4,10 +4,11 @@ package com.team13.WaitDoc.base.initData;
 import com.team13.WaitDoc.base.util.ApiUt;
 import com.team13.WaitDoc.base.util.HospitalXml;
 import com.team13.WaitDoc.category.DTO.CategoryRequestDTO;
-import com.team13.WaitDoc.hospital.repository.HospitalBulkRepository;
+import com.team13.WaitDoc.hospital.entity.Hospital;
 import com.team13.WaitDoc.hospital.repository.HospitalRepository;
+import com.team13.WaitDoc.hospital.service.DepartmentService;
 import jakarta.annotation.PostConstruct;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 
@@ -16,11 +17,11 @@ import java.util.List;
 import java.util.stream.Collectors;
 @Profile({"prod"})
 @Component
+@RequiredArgsConstructor
 public class ApiData {
-    @Autowired
-    private HospitalBulkRepository hospitalBulkRepository;
-    @Autowired
-    private HospitalRepository hospitalRepository;
+    private final HospitalRepository hospitalRepository;
+    private final DepartmentService departmentService;
+
 
     @PostConstruct
     public void loadData() throws IOException, InterruptedException {
@@ -31,13 +32,14 @@ public class ApiData {
 
             if (items.isEmpty())
                 break;
-//
 //            hospitalBulkRepository.bulkSave(items.stream()
 //                    .map(HospitalXml.Item::toEntity)
 //                    .collect(Collectors.toList()));
-            hospitalRepository.saveAll(items.stream()
-                    .map(HospitalXml.Item::toEntity)
-                    .collect(Collectors.toList()));
+            List<Hospital> hospitals = items.stream()
+                    .map(HospitalXml.Item::toHospitalEntity)
+                    .toList();
+            hospitalRepository.saveAll(hospitals);
+            departmentService.saveAll(hospitals);
 
         }
 
